#274 enable drop on controls

--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -47,6 +47,7 @@
 	.controls:hover {
 		.btn { opacity: 1; }
 	}
+	.controls.isDraggingOver { background: rgba(255,187,44,0.3); }
 }
 
 .editorWrapper.withIcon { padding-top: 40px; }
