--- a/src/scss/menu/block/context.scss
+++ b/src/scss/menu/block/context.scss
@@ -3,11 +3,7 @@
 .menus {
 	.menu.menuBlockContext { padding: 0px; height: 44px; transform-origin: 50% 50% !important; }
 	.menu.menuBlockContext {
-		.icon.blockStyle { width: 36px; background-position: 0px center; }
-		.icon.color { width: 36px; }
-		.icon.color {
-			.inner { margin: 0px; left: 0px; top: 0px; margin: 0px; }
-		}
+		.icon.blockStyle { width: 32px; background-size: 20px 20px; background-position: 0px center; }
 		
 		.icon.blockStyle.active.text { background-image: url('~img/icon/menu/style/text.svg'); }
 		.icon.blockStyle.active.header1 { background-image: url('~img/icon/menu/style/header1.svg'); }
