--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -23,6 +23,7 @@ html.debug {
 			.item { background: rgba(0,0,255,0.1); }
 			.item {
 				.icon { background-color: rgba(0,0,255,0.1); }
+				.name { background-color: rgba(0,0,255,0.1); }
 			}
 			
 			.section > .name { background: rgba(0,0,255,0.1); }
