--- a/src/scss/menu/block/icon.scss
+++ b/src/scss/menu/block/icon.scss
@@ -35,6 +35,7 @@
 		.icon.link { background-image: url('~img/icon/menu/action/mark/link0.svg'); }
 		.icon.kbd { background-image: url('~img/icon/menu/action/mark/code0.svg'); }
 		
+		.icon.turn { background-image: url('~img/icon/menu/action/turn0.svg'); }
 		.icon.move { background-image: url('~img/icon/menu/action/move0.svg'); }
 		.icon.comment { background-image: url('~img/icon/menu/action/comment0.svg'); }
 		.icon.copy { background-image: url('~img/icon/menu/action/copy0.svg'); }
