--- a/src/scss/component/dragLayer.scss
+++ b/src/scss/component/dragLayer.scss
@@ -2,15 +2,15 @@
 .dragLayer {
 	.blocks { margin: 0px !important; }
 	.blocks {
-		.block { border: 0px; width: 100% !important; padding-left: 4px; }
+		.block { border: 0px; width: 100% !important;  }
 		.block {
 			.wrapMenu { display: none; }
-			.wrapContent { width: 100%; }
+			.wrapContent { width: 100%; padding-left: 4px; }
 			
 			.children {
 				.block { box-shadow: 0px 0px; padding: 0px; }
 				.wrapMenu { display: block; }
-				.wrapContent { width: calc(100% - 46px); }
+				.wrapContent { width: calc(100% - 46px); padding: 0px; }
 			}
 		}
 		.block:last-child { margin: 0px; }
