--- a/src/scss/menu/block/common.scss
+++ b/src/scss/menu/block/common.scss
@@ -11,7 +11,7 @@
 		.item.purple.active { background: #f4e3fa !important; }
 	
 		.icon { width: 24px; height: 24px; background-size: 100% 100%; }
-		.icon.arrow { position: absolute; right: 8px; top: 4px; margin: 0px; background-image: url('~img/icon/menu/add/arrow.svg'); }
+		.icon.arrow { position: absolute; right: 10px; top: 4px; margin: 0px; background-image: url('~img/icon/menu/arrow.svg'); }
 	}
 	
 	.menu.menuBlockAdd.withFilter, .menu.menuBlockAddSub.withFilter { width: 288px !important; padding: 12px 0px; }
