--- a/src/scss/menu/dataview/property.scss
+++ b/src/scss/menu/dataview/property.scss
@@ -20,7 +20,7 @@
 		
 		.icon.arrow { 
 			width: 20px; height: 20px; position: absolute; right: 14px; top: 50%; margin: -10px 0px 0px 0px; 
-			background-image: url('~img/icon/menu/arrow.svg'); 
+			background-image: url('~img/arrow/menu.svg'); 
 		}
 	}
 }
