--- a/src/scss/popup/feedback.scss
+++ b/src/scss/popup/feedback.scss
@@ -13,7 +13,7 @@
 		.title { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; margin-bottom: 16px; }
 		.label { margin-bottom: 10px; }
 		.input { height: 40px; border: 1px solid #DFDDD0; padding: 0px 16px; }
-		.textarea { height: 160px; padding: 16px; border: 1px solid #DFDDD0; background: none; font-family: 'Lcg'; }
+		.textarea { height: 160px; padding: 16px; border: 1px solid #DFDDD0; background: none; font-family: 'Inter'; }
 		
 		.icon.checkbox { margin: 2px 8px 0px 0px; }
 		.small { font-size: 13px; line-height: 20px; width: calc(100% - 24px); }
