--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -1,7 +1,7 @@
 @import "~scss/_vars";
 
 .blocks {
-	.block.blockText { font-size: 15px; line-height: 24px; letter-spacing: -0.08px; font-weight: 400; word-wrap: break-word; }
+	.block.blockText { font-size: 16px; line-height: 24px; letter-spacing: 0.08px; font-weight: 400; word-wrap: break-word; }
 	.block.blockText {
 		.wrap { flex: auto; position: relative; padding: 0px; width: 100%; }
 		.value { -webkit-user-modify: read-write-plaintext-only; width: 100%; overflow: hidden; }
@@ -21,16 +21,16 @@
 			}
 			
 			.marker.number { vertical-align: baseline; line-height: 24px; }
-			.marker.number > span { min-width: 28px; line-height: 1; display: inline-block; text-align: center; padding-right: 4px; }
+			.marker.number > span { min-width: 28px; line-height: 1; display: inline-block; text-align: center; padding-right: 6px; }
 			
 			.marker.bullet {
-				span { min-width: 28px; line-height: 1; display: inline-block; text-align: center; padding-right: 4px; }
-				img { width: 6px; height: 6px; display: inline-block; vertical-align: top; margin-top: 3px; }
+				span { min-width: 28px; line-height: 1; display: inline-block; text-align: center; padding-right: 6px; }
+				img { width: 6px; height: 6px; display: inline-block; vertical-align: top; margin-top: 4px; }
 			}
 			
-			.marker.check, .marker.toggle { width: 24px; height: 24px; line-height: 24px; margin-right: 4px; cursor: pointer; }
+			.marker.check, .marker.toggle { width: 24px; height: 24px; line-height: 24px; margin-right: 6px; cursor: pointer; }
 			.marker.check, .marker.toggle {
-				img { width: 24px; height: 24px; margin-top: -1px; }
+				img { width: 100%; height: 100%; }
 			}
 			
 		}
@@ -42,18 +42,20 @@
 	
 	.block.blockText.header1 { padding: 23px 0px 1px 0px; }
 	.block.blockText.header1 > .wrapContent > .selectable > .dropTarget { 
-		font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; 
+		font-family: 'Lcg'; font-size: 28px; line-height: 32px; letter-spacing: -0.36px; font-weight: 600; 
 	}
 	
 	.block.blockText.header2 { padding: 15px 0px 1px 0px; }
 	.block.blockText.header2 > .wrapContent > .selectable > .dropTarget { 
-		font-size: 22px; line-height: 28px; letter-spacing: -0.16px; font-weight: 600; 
+		font-family: 'Lcg';font-size: 22px; line-height: 28px; letter-spacing: -0.16px; font-weight: 600; 
 	}
 	
 	.block.blockText.header3 { padding: 15px 0px 1px 0px; }
-	.block.blockText.header3 > .wrapContent > .selectable > .dropTarget { font-size: 17px; line-height: 24px; font-weight: 600; }
+	.block.blockText.header3 > .wrapContent > .selectable > .dropTarget { 
+		font-size: 18px; line-height: 26px; letter-spacing: 0.04px; font-weight: 600; 
+	}
 	
-	.block.blockText.quote { padding: 7px 0px 7px 0px; font-size: 18px; line-height: 26px; font-style: italic; }
+	.block.blockText.quote { padding: 7px 0px 7px 0px; font-size: 18px; line-height: 26px; letter-spacing: 0.04px; font-style: italic; }
 	.block.blockText.quote > .wrapContent > .selectable > .dropTarget { padding: 4px 4px !important; }
 	.block.blockText.quote > .wrapContent > .selectable > .dropTarget > .flex > .line { 
 		width: 0px; height: calc(100% + 8px); position: absolute; left: 11px; top: -4px; border-left: 2px solid $colorOrange; 
