--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -4,7 +4,7 @@
 html, body { height: 100%; }
 
 body {
-	font-family: 'Lcg'; font-size: 14px; line-height: 22px; letter-spacing: 0.2px; color: $colorBlack;
+	font-family: 'Inter'; font-size: 14px; line-height: 22px; letter-spacing: 0.2px; color: $colorBlack;
 	overflow-x: hidden; overflow-y: scroll; background: #fff;
 	-webkit-font-smoothing: antialiased;
 	backface-visibility: hidden;
@@ -25,7 +25,7 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus { transition: background-color 5000s ease-in-out 0s; }
-input, textarea, select { font-family: 'Lcg'; }
+input, textarea, select { font-family: 'Inter'; }
 
 #drag { -webkit-app-region: drag; position: fixed; top: 0px; left: 0px; width: 100%; height: 40px; z-index: -1; user-select: none; }
 #root > .loaderWrapper { position: fixed; width: 100%; height: 100%; left: 0px; top: 0px; }
