--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -11,6 +11,9 @@
 }
 
 .smile.c24 { width: 24px; height: 24px; line-height: 24px; }
+.smile.c24 {
+	.icon.blank { width: 20px; height: 20px; }
+}
 
 .smile.c48 { width: 48px; height: 48px; border-radius: 100%; background-color: #f7f5f0; line-height: 48px; }
 .smile.c48 {
