--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -39,4 +39,9 @@ html.debug {
 			.section > .name { background-color: rgba(0,0,255,0.1); }
 		}
 	}
+	
+	.inputWithFile {
+		.icon { background-color: rgba(0,0,255,0.1); }
+		.txt { background-color: rgba(0,0,255,0.1); }
+	}
 } 
