--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -32,7 +32,7 @@
 		.item {
 			.icon.arrow { margin: 0px; width: 6px; height: 10px; background-image: url('~img/arrow/path.svg'); vertical-align: middle; }
 			.smile { margin-right: 4px; }
-			.name { display: inline-block; vertical-align: middle; margin-right: 8px; line-height: 20px; }
+			.name { display: inline-block; vertical-align: top; margin-right: 8px; line-height: 20px; }
 		}
 		.item:last-child { margin: 0px; }
 		.item:last-child {
