--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -59,8 +59,7 @@
 			.view { border-top: 1px solid #e0ded2; }
 			
 			.card { min-height: 112px; border: 1px solid $colorLightGrey; border-radius: 12px; padding: 16px; }
-			
-			.cell { font-size: 13px; line-height: 18px; letter-spacing: -0.08px; }
+			.cell { @include text-small; }
 			
 			/* Title */
 			.cell.c0 { font-weight: 500; }
@@ -87,7 +86,7 @@
 			.view.viewGrid { border-collapse: collapse; min-width: 100%; border-bottom: 1px solid #e0ded2; }
 			.view.viewGrid {
 				.head { 
-					text-align: left; font-size: 13px; line-height: 18px; letter-spacing: 0.08px; color: $colorDarkGrey; font-weight: 500;
+					text-align: left; @include text-small; color: $colorDarkGrey; font-weight: 500;
 					padding: 7px 8px; border-bottom: 1px solid #e0ded2; border-right: 1px solid #e0ded2; white-space: nowrap;
 				}
 				.head:last-child { border-right: 0px; }
