--- a/src/scss/popup/prompt.scss
+++ b/src/scss/popup/prompt.scss
@@ -7,7 +7,7 @@
 			height: 32px; border: 1px solid #d2d0c2; padding: 0px 12px; font-size: 13px; line-height: 1.38; letter-spacing: 0.1px; color: #000;
 			width: 100%; margin-bottom: 12px; 
 		}
-		.row { font-size: 13px; line-height: 1.38; margin-bottom: 12px; }
+		.row { @include text-small; margin-bottom: 12px; }
 		.button { height: 32px; line-height: 32px; margin-right: 10px; }
 	}	
 }
