--- a/src/scss/block/bookmark.scss
+++ b/src/scss/block/bookmark.scss
@@ -26,15 +26,9 @@
 			.img { background-position: center center; }
 		}
 
-		.name { height: 22px; letter-spacing: 0.2px; color: $colorBlack; @include text-overflow-nw; }
-		.descr { 
-			font-size: 12px; line-height: 18px; height: 36px; letter-spacing: 0.32px; color: #6c6a5f; margin: 2px 0px 5px 0px;
-			@include text-overflow;
-		}
-		.link { 
-			font-size: 12px; line-height: 18px; height: 18px; letter-spacing: 0.32px; color: $colorBlack; 
-			@include text-overflow-nw;   
-		}
+		.name { @include text-common; height: 22px; color: $colorBlack; @include text-overflow-nw; }
+		.descr { @include text-small; height: 36px; color: #6c6a5f; margin: 2px 0px 5px 0px; @include text-overflow; }
+		.link { @include text-small; height: 18px; color: $colorBlack; @include text-overflow-nw; }
 		
 		.img {
 			width: 100%; height: 100%; background-repeat: no-repeat; background-image: url('~img/blank/bookmark.png');
