--- a/src/scss/popup/feedback.scss
+++ b/src/scss/popup/feedback.scss
@@ -16,7 +16,7 @@
 		.textarea { height: 160px; padding: 16px; border: 1px solid #DFDDD0; background: none; font-family: 'Inter'; }
 		
 		.icon.checkbox { margin: 2px 8px 0px 0px; }
-		.small { font-size: 13px; line-height: 20px; width: calc(100% - 24px); }
+		.small { @include text-small; width: calc(100% - 24px); }
 		
 		.error { margin: 0px; color: #e89d00; line-height: 40px; width: calc(100% - 100px); }
 		.button.submit { margin-right: 16px; width: 84px; }
