--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -103,7 +103,7 @@
 				.cell:last-child { margin: 0px; }
 			
 				/* Title */
-				.cell.c0 { font-size: 15px; letter-spacing: -0.08px; margin-bottom: 9px; }
+				.cell.c0 { margin-bottom: 9px; }
 				
 				/* Date */
 				.cell.c3 { color: #6c6a5f; }
