--- a/src/scss/page/main/index.scss
+++ b/src/scss/page/main/index.scss
@@ -24,7 +24,7 @@
 		
 		.item {
 			.name { 
-				font-size: 15px; font-weight: 500; line-height: 24px; height: 24px; letter-spacing: -0.1px; width: 100%;
+				@include text-common; font-weight: 500; height: 22px; width: 100%;
 				word-break: break-word; position: absolute; left: 0px; bottom: 12px; padding: 0px 16px; @include text-overflow-nw;  
 			}
 		}
