--- a/src/scss/component/smile.scss
+++ b/src/scss/component/smile.scss
@@ -31,7 +31,7 @@
 .smile.c64 { width: 64px; height: 64px; border-radius: 100%; background-color: #f7f5f0; line-height: 64px; }
 .smile.c64 {
 	.emoji-mart-emoji { font-size: 36px; height: 1em; line-height: 1em; }
-	.emoji-mart-emoji { span { height: 36px; line-height: 36px; margin: 3px 0px 0px 0px; } }
+	.emoji-mart-emoji { span { height: 36px; line-height: 36px; } }
 	.icon.blank { width: 24px; height: 24px; margin: -12px 0px 0px -12px; }
 }
 
