--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -6,8 +6,8 @@
 		.error { margin: 0px; font-size: 12px; line-height: 24px; height: 24px; }
 		
 		.name {
-			min-width: 40px; max-width: calc(100% - 180px); height: 22px; line-height: 22px; display: inline-block;
-			vertical-align: top; padding-top: 1px; cursor: pointer; @include text-overflow-nw;  
+			@include text-common; min-width: 40px; max-width: calc(100% - 180px); height: 22px; display: inline-block;
+			vertical-align: top; cursor: pointer; @include text-overflow-nw;  
 		}
 		.size {
 			max-width: 100px; font-size: 12px; height: 22px; line-height: 22px; letter-spacing: 0.1px; color: $colorDarkGrey; margin: 0px 8px;
