--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -14,7 +14,7 @@
 			display: inline-block; vertical-align: top; padding-top: 1px;
 		}
 		.download {
-			width: 80px; height: 22px; letter-spacing: 0.2px; color: #2dbcfe;
+			@include text-common; width: 80px; height: 22px; color: #2dbcfe;
 			transition: $transitionFast; opacity: 0; padding-top: 1px; display: inline-block; cursor: pointer;
 		}
 		.download:hover { color: #1092d9; }
