--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -7,7 +7,7 @@
 
 .arrow { background-position: center center; transition: $transitionFast; background-repeat: no-repeat; background-size: 100% 100%; }
 
-.icon.home { background-image: url('~img/icon/home.svg'); }
+.icon.home { background-image: url('~img/icon/home0.svg'); }
 .icon.search { width: 24px; height: 24px; background-image: url('~img/icon/search.svg'); }
 
 .icon.help { width: 22px; height: 22px; background-image: url('~img/icon/help/dark0.svg'); }
