--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -2,11 +2,6 @@
 
 .header { position: fixed; top: 0px; left: 0px; width: 100%; z-index: 20; transition: $transitionFast; }
 .header {
-	.logo {
-		width: 60px; height: 13px; position: absolute; left: 50%; margin-left: -30px; top: 14px; background: url('~img/logo.svg') no-repeat;
-		background-position: center center;
-	}
-
 	.menu { position: absolute; top: 8px; right: 16px; z-index: 1; color: #fff; }
 	.menu {
 		.item {
@@ -17,19 +12,27 @@
 		.item:last-child { margin-right: 0px; }
 
 		.item {
-			.icon.plus-new { margin: -4px 7px 0px 0px; width: 16px; height: 16px; background-image: url('~img/icon/plus/new0.svg'); }
+			.icon { margin-right: 4px; }
+			.icon.plus-new { background-image: url('~img/icon/plus/new0.svg'); }
+			.name { display: inline-block; vertical-align: top; line-height: 20px; }
 		}
 		.item:hover {
 			.icon.plus-new { background-image: url('~img/icon/plus/new1.svg'); }
 		}
 	}
 	
-	.icon { width: 20px; height: 20px; cursor: pointer; margin-right: 4px; vertical-align: top; }
+	.icon { width: 20px; height: 20px; cursor: pointer; margin-right: 8px; vertical-align: top; }
+	
+	.icon.logo {
+		width: 60px; height: 13px; position: absolute; left: 50%; margin-left: -30px; top: 14px; background: url('~img/logo.svg') no-repeat;
+		background-position: center center;
+	}
 
 	.path { white-space: nowrap; }
 	.path {
 		.item { display: inline-block; vertical-align: top; color: #6c6a5f; margin-right: 4px; cursor: pointer; transition: $transitionFast; }
 		.item {
+			.icon { margin-right: 4px; }
 			.icon.arrow { margin: 0px; width: 6px; height: 10px; background-image: url('~img/arrow/path.svg'); vertical-align: middle; }
 			.smile { margin-right: 4px; }
 			.name { display: inline-block; vertical-align: top; margin-right: 8px; line-height: 20px; }
@@ -40,6 +43,9 @@
 			.name { margin: 0px; }
 		}
 		.item:hover { color: $colorBlack; }
+		.item:hover {
+			.icon.home { background-image: url('~img/icon/home1.svg'); }
+		}
 	}
 	
 	.icon.nav { background-image: url('~img/icon/nav0.svg'); }
