--- a/src/scss/block/file.scss
+++ b/src/scss/block/file.scss
@@ -6,16 +6,16 @@
 		.error { margin: 0px; font-size: 12px; line-height: 24px; height: 24px; }
 		
 		.name {
-			@include text-common; min-width: 40px; max-width: calc(100% - 180px); height: 22px; display: inline-block;
+			@include text-common; min-width: 40px; max-width: calc(100% - 180px); height: 24px; line-height: 24px; display: inline-block;
 			vertical-align: top; cursor: pointer; @include text-overflow-nw;  
 		}
 		.size {
-			max-width: 100px; font-size: 12px; height: 22px; line-height: 22px; letter-spacing: 0.1px; color: $colorDarkGrey; margin: 0px 8px;
-			display: inline-block; vertical-align: top; padding-top: 1px;
+			max-width: 100px; font-size: 12px; height: 24px; line-height: 24px; letter-spacing: 0.1px; color: $colorDarkGrey; margin: 0px 8px;
+			display: inline-block; vertical-align: top;
 		}
 		.download {
-			@include text-common; width: 80px; height: 22px; color: #2dbcfe;
-			transition: $transitionFast; opacity: 0; padding-top: 1px; display: inline-block; cursor: pointer;
+			@include text-common; width: 80px; height: 24px; line-height: 24px; color: #2dbcfe; transition: $transitionFast; 
+			opacity: 0; display: inline-block; cursor: pointer; vertical-align: top;
 		}
 		.download:hover { color: #1092d9; }
 
